KUBE_MANIFEST/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eshopwebmvc-service
spec:
  type: NodePort
  selector:
    app: eshopwebmvc
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: eshoppublicapi-service
spec:
  type: NodePort
  selector:
    app: eshoppublicapi
  ports:
    - protocol: TCP
      port: 443   # Corrected from 'https'
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
spec:
  type: NodePort
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
---
