KUBE_MANIFEST/eshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/tags: Project=Final-ingress
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eshopwebmvc-service
            port:
              number: 80
---
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eshoppublicapi-service
            port:
              number: 80
---
